fix(deps): Dependency com.hazelcast:hazelcast-hibernate6:2.3.1 is added to ensure Hazelcast + Hibernate work together. Hibernate properties are renamed. Also: commons-logging dependency is excluded to avoid loggers conflicts.