@@ -1,4 +1,8 @@
 java -cp "lib/*" ^
+--add-modules java.se --add-exports java.base/jdk.internal.ref=ALL-UNNAMED ^
+--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED ^
+--add-opens java.management/sun.management=ALL-UNNAMED ^
+--add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED ^
 -Dserver.port=8180 ^
 -Dspring.config.location=application.properties ^
 -Dspring.cloud.bootstrap.location=bootstrap.properties ^
